# kinopub-downloader

./: .gitignore  Cargo.toml
src/: app.rs  main.rs  utils.rs
src/api/: mod.rs  search.rs
src/auth/: authenticator.rs  mod.rs  storage.rs  token.rs
src/parallel_downloader/: mod.rs
